# poo-bvg

./: # Projeto Avaliativo 6 - Sistema Avançado de Gestão Acadêmica.docx  .gitIgnore  .gitignore  Aluno.cpp  Aluno.h  Atividade projeto_2.mdj  Disciplina.h  Documentação do projeto-2.docx  Filtro.h  FuncionarioAdministrativo.cpp  FuncionarioAdministrativo.h  Monitor.cpp  Monitor.h  Persistencia.cpp  Persistencia.h  Professor.cpp  Professor.h  Projeto Avaliativo 8_ Gerenciamento Acadêmico Resiliente.docx  Projeto_5 .docx  README.md  README5.md  SinalHandler.cpp  SinalHandler.h  Sistema Genérico de Filtragem e Relatórios Acadêmicos.docx  Usuario.h  UsuarioAutenticavel.h  aluno.cpp  aluno.h  alunos.txt  carro.py  cliente.py  dados.txt  disciplina.cpp  disciplina.h  filtro.h  funcionarioAdm.cpp  funcionarioAdm.h  funcionarioadiministrativo.cpp  funcionarioadministrativo.cpp  mai.cpp  (+17 more)
PROJETO_04_GUSTAVO_FREITAS/: README.md
Projeto 1 Aerton/: cliente.py
Projeto 4 - Marcos Barros/: Aluno.cpp  Aluno.h  Disciplina.h  disciplina.cpp  main.cpp
Projeto 5 - Marcos Barros/: Aluno.cpp  Aluno.h  FuncionarioAdministrativo.cpp  FuncionarioAdministrativo.h  Monitor.cpp  Monitor.h  Professor.cpp  Professor.h  Usuario.h  main.cpp
Projeto 6 - Marcos Barros/: Aluno.cpp  Aluno.h  FuncionarioAdministrativo.cpp  FuncionarioAdministrativo.h  Professor.cpp  Professor.h  Relatorio.h  TipoUsuario.h  Usuario.cpp  Usuario.h  UsuarioAutenticavel.cpp  UsuarioAutenticavel.h  main.cpp
SRC/: Aluno.cpp  (+12 more)
TESTES/: CMakeLists.txt  test_aluno.cpp  test_funcionario.cpp  test_monitor.cpp  test_professor.cpp
(+1802 files in other folders)
